fixed petition button being covered

--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -105,7 +105,7 @@ textarea {
 .content {
     width:90%;
     margin:auto;
-    margin-bottom:100px;
+    margin-bottom:150px;
 }
 
 /*end content frame*/
